servlet - per servlet parameter

--- a/servletdemo/WebContent/WEB-INF/web.xml
+++ b/servletdemo/WebContent/WEB-INF/web.xml
@@ -19,4 +19,25 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+   <servlet>
+      <servlet-name>TestServletParam</servlet-name>
+      <servlet-class>org.study.servletdemo.TestServletParam</servlet-class>
+ 
+      <init-param>
+        <param-name>greeting</param-name>
+        <param-value>Welcome</param-value>
+      </init-param>
+ 
+      <init-param>
+        <param-name>serviceLevel</param-name>
+        <param-value>Platinum</param-value>
+      </init-param>
+ 
+    </servlet>  
+    
+    <servlet-mapping>
+      <servlet-name>TestServletParam</servlet-name>
+      <url-pattern>/demo</url-pattern>
+    </servlet-mapping>
 </web-app>
